--- a/SpringAppFirst/pom.xml
+++ b/SpringAppFirst/pom.xml
@@ -28,6 +28,18 @@
     </dependency>
 
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>jsr250-api</artifactId>
+      <version>1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
       <version>5.3.5</version>
@@ -44,6 +56,11 @@
       <artifactId>spring-core</artifactId>
       <version>5.3.5</version>
     </dependency>
+      <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+          <version>9.0.38</version>
+      </dependency>
 
   </dependencies>
 
