--- a/SpringCRUDApp/pom.xml
+++ b/SpringCRUDApp/pom.xml
@@ -78,6 +78,13 @@
       <version>2.0.1.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.18</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
