--- a/SpringCRUDApp/pom.xml
+++ b/SpringCRUDApp/pom.xml
@@ -84,11 +84,16 @@
       <version>42.2.18</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
 
   </dependencies>
 
   <build>
-    <finalName>SpringMvcFirstApp</finalName>
+    <finalName>SpringCRUDApp</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
